kube/endpoint/external-service-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: external-service
subsets:
  - addresses:
      - ip: 172.17.0.9
      - ip: 172.17.0.10
    ports:
      - port: 8080
