kube/endpoint/external-service-endpoints2.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: external-service
subsets:
  - addresses:
    - ip: 10.13.82.21
    ports:
    - port: 8080
